src/test/resources/org/nest/spl/_cocos/invalid/funNotDefined.simple
module org.nest.spl._cocos.funNotDefined

bar() /* not defined */

# not defined
random(2) # not defined with parameter